syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ukrainskykirill/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc ConnectChat(ConnectChatRequest) returns (stream Message);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message ConnectChatRequest {
    string chat_id = 1;
    string user_id = 2;
}

message Message {
    string user_id = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message CreateRequest {
    repeated int64 userIDs = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendMessageRequest {
    int64 chatID = 1;
    int64 userId = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;
}